tests/enumerror/enumerror.exp
Error ----------------------------------------------------------------------------------------------- enum-crash.js:7:25

Cannot resolve module `somewhere`.

   7| import type {Enum} from 'somewhere';
                              ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- enum-crash.js:11:5

Cannot refine `Enum` as a value. 

           v-------------
   11|     case Enum.FOO:
   12|       return 0;
             --------^


Error ---------------------------------------------------------------------------------------------- enum-crash.js:11:10

Cannot reference type `Enum` [1] from a value position.

   enum-crash.js:11:10
   11|     case Enum.FOO:
                ^^^^

References:
   enum-crash.js:7:14
    7| import type {Enum} from 'somewhere';
                    ^^^^ [1]


Error ----------------------------------------------------------------------------------------------- enumerror.js:10:18

Cannot call `isActive` with object literal bound to `ad` because property `PAUSE` (did you mean `PAUSED`?) is missing in
object type [1] in property `state`.

   enumerror.js:10:18
   10| isActive({state: 'PAUSE'});
                        ^^^^^^^

References:
   enumerror.js:3:37
                                           v
    3| function isActive(ad: {state: $Keys<{
    4|     PAUSED: string;
    5|     ACTIVE: string;
    6|     DELETED: string;
    7| }>}): boolean {
       ^ [1]


Error ----------------------------------------------------------------------------------------------- enumerror.js:20:19

Cannot call `isActive2` with object literal bound to `ad` because property `PAUSE` (did you mean `PAUSED`?) is missing
in object literal [1] in property `state`.

   enumerror.js:20:19
   20| isActive2({state: 'PAUSE'});
                         ^^^^^^^

References:
   enumerror.js:17:38
   17| function isActive2(ad: {state: $Keys<typeof MyStates>}): boolean {
                                            ^^^^^^^^^^^^^^^ [1]



Found 5 errors
